<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="true_button">Vero</string>
    <string name="false_button">Falso</string>
    <string name="correct_toast">Risposta esatta!</string>
    <string name="incorrect_toast">Risposta errata!</string>
    <string name="next_button">Prossima</string>
    <string name="question_oceans">The Pacific Ocean is larger than
 the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
 and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
 in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
    <string name="next_toast">Avanzato</string>>
    <string name="undo_button">Indietro</string>
    <string name="default_display">Dummy text</string>
    <string name="warning">Vuoi davvero farlo?</string>
    <string name="show_answer_button">Mostra risposta</string>
    <string name="cheat_button">Imbroglia</string>
    <string name="toast_giudicante">Imbrogliare è sbagliato</string>
    <string name="API_DUMMY">Some APIs</string>
    <string name="CheatsToken">Remaining Cheats: default</string>
</resources>